--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "^6.1.0",
+    "@mui/x-charts": "^7.18.0",
+    "@mui/x-date-pickers": "^7.17.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "styled-components": "^6.1.13"
   },
